--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 <body>
     <div class="chat">
-     <div></div>
+        <div><p>chat</p></div>
      <div></div>
     </div>
 </body>
